relink to new web address

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Social Media Open Graph Tags -->
     <meta property="og:title" content="ABCDΞSIGN — Від «А-Б-Ц» до «Під-ключ-Все» Дизайн!" />
     <meta property="og:description" content="Від Ескізу до Дизайну Під Ключ — Все в Одному Місці. Надаємо комплексні дизайнерські послуги." />
-    <meta property="og:image" content="https://1abcdesign.github.io/logo.png" /> <!-- Replace with real image link -->
+    <meta property="og:image" content="https://vadim4web.github.io/abcd-sign/logo.png" /> <!-- Replace with real image link -->
     <meta property="og:url" content="https://abcd-sign.com" />
     <meta property="og:type" content="website" />
 
@@ -20,11 +20,11 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="ABCDΞSIGN — Від «А-Б-Ц» до «Під-ключ-Все» Дизайн!" />
     <meta name="twitter:description" content="Від Ескізу до Дизайну Під Ключ. Надаємо дизайнерські послуги для вашого простору." />
-    <meta name="twitter:image" content="https://1abcdesign.github.io/logo.png" /> <!-- Replace with real image link -->
+    <meta name="twitter:image" content="https://vadim4web.github.io/abcd-sign/logo.png" /> <!-- Replace with real image link -->
 
     <!-- Favicon -->
-    <link id="favicon" rel="shortcut icon" type="image/x-icon" href="https://1abcdesign.github.io/favicon_light.ico" />
-    <link rel="preload" href="https://1abcdesign.github.io/logo.png" as="image">
+    <link id="favicon" rel="shortcut icon" type="image/x-icon" href="https://vadim4web.github.io/abcd-sign/favicon_light.ico" />
+    <link rel="preload" href="https://vadim4web.github.io/abcd-sign/logo.png" as="image">
 
     <!-- Fonts -->
     <link
@@ -62,9 +62,9 @@
         --color-alt: #222;
         --shadow: #8888;
         --gradient: linear-gradient(45deg, var(--grey) 0%, transparent 25%, transparent 75%, var(--color-alt) 100%);
-        --cursor: url('https://1abcdesign.github.io/scissors-white.cur') 0 9,
-                  url('https://1abcdesign.github.io/scissors-white.ico') 0 9,
-                  url('https://1abcdesign.github.io/scissors-white.png') 0 9,
+        --cursor: url('https://vadim4web.github.io/abcd-sign/scissors-white.cur') 0 9,
+                  url('https://vadim4web.github.io/abcd-sign/scissors-white.ico') 0 9,
+                  url('https://vadim4web.github.io/abcd-sign/scissors-white.png') 0 9,
                   pointer;
         background: #fff;
         color: #000;
@@ -80,9 +80,9 @@
         --color-alt: #ddd;
         --shadow: #8888;
         --gradient: linear-gradient(45deg, var(--color-alt) 0%, transparent 25%, transparent 66%, var(--color-alt) 100%);
-        --cursor: url('https://1abcdesign.github.io/scissors-black.cur') 0 9,
-                        url('https://1abcdesign.github.io/scissors-black.ico') 0 9,
-                        url('https://1abcdesign.github.io/scissors-black.png') 0 9,
+        --cursor: url('https://vadim4web.github.io/abcd-sign/scissors-black.cur') 0 9,
+                        url('https://vadim4web.github.io/abcd-sign/scissors-black.ico') 0 9,
+                        url('https://vadim4web.github.io/abcd-sign/scissors-black.png') 0 9,
                         pointer;
         background: #000;
         color: #fff;
@@ -119,7 +119,7 @@
         content: '';
         width: 100dvw;
         height: 100%;
-        background-image: url('https://1abcdesign.github.io/logo.png');
+        background-image: url('https://vadim4web.github.io/abcd-sign/logo.png');
         background-repeat: repeat;
         background-position: center;
         opacity: 0.1;
@@ -218,7 +218,7 @@
         document.documentElement.setAttribute('data-theme', savedTheme);
 
         const favicon = document.getElementById('favicon');
-        favicon.href = savedTheme === 'dark' ? 'https://1abcdesign.github.io/favicon_dark.ico' : 'https://1abcdesign.github.io/favicon_light.ico';
+        favicon.href = savedTheme === 'dark' ? 'https://vadim4web.github.io/abcd-sign/favicon_dark.ico' : 'https://vadim4web.github.io/abcd-sign/favicon_light.ico';
       })();
     </script>
   </head>
@@ -230,7 +230,7 @@
       "@type": "Organization",
       "name": "ABCDΞSIGN",
       "url": "https://abcd-sign.com",
-      "logo": "https://1abcdesign.github.io/logo.png",
+      "logo": "https://vadim4web.github.io/abcd-sign/logo.png",
       "description": "ABCDΞSIGN — Від «А-Б-Ц» до «Під-ключ-Все» Дизайн! Компанія з надання дизайнерських послуг для інтер'єру, екстер'єру та ландшафтного дизайну.",
       "contactPoint": {
         "@type": "ContactPoint",
