--- a/404.html
+++ b/404.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <title>1ABCDesign | 404</title>
-    <link id="favicon" rel="icon" type="image/x-icon" href="https://1abcdesign.github.io/favicon_light.ico" />
-    <link rel="preload" href="https://1abcdesign.github.io/favicon_dark.ico" as="image">
+    <link id="favicon" rel="icon" type="image/x-icon" href="https://vadim4web.github.io/abcd-sign/favicon_light.ico" />
+    <link rel="preload" href="https://vadim4web.github.io/abcd-sign/favicon_dark.ico" as="image">
     <script type="text/javascript">
       // MIT License
       // https://github.com/rafgraph/spa-github-pages
