--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>1ABCDesign | 404</title>
+    <title>vadim4web | 404</title>
     <link id="favicon" rel="icon" type="image/x-icon" href="https://vadim4web.github.io/abcd-sign/favicon_light.ico" />
     <link rel="preload" href="https://vadim4web.github.io/abcd-sign/favicon_dark.ico" as="image">
     <script type="text/javascript">
